// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHOC shallow mount #Hoc rendering renders correctly when loading is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HOC
    currentWallet={
        Immutable.Map {
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
        }
    }
    currentWalletWithInfo={
        Immutable.Map {
            name: "1",
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
            type: "software",
            encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
            balances: Immutable.Map {
                loading: false,
                error: null,
                assets: Immutable.List [
                    Immutable.Map {
                        balance: "0.29972769885",
                        currency: "ETH",
                        symbol: "ETH",
                        value: Immutable.Map {
                            eth: "0.29972769885",
                            btc: "0.0029972769885",
                            usd: "123.4878119262",
                        },
                    },
                    Immutable.Map {
                        balance: "1",
                        currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                        symbol: "BOKKY",
                        value: Immutable.Map {
                            eth: "0",
                            btc: "0",
                            usd: "0",
                        },
                    },
                ],
                total: Immutable.Map {
                    eth: "0.29972769885",
                    btc: "0.0029972769885",
                    usd: "123.4878119262",
                },
            },
            loadingBalances: false,
            loadingBalancesError: null,
        }
    }
    decryptWallet={[Function]}
    hideDecryptWalletModal={[Function]}
    initLedger={[Function]}
    initWalletsBalances={[Function]}
    loading={
        Immutable.Map {
            decryptingWallet: false,
        }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          currentWallet={
                    Immutable.Map {
                              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                    }
          }
          currentWalletWithInfo={
                    Immutable.Map {
                              name: "1",
                              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                              type: "software",
                              encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
                              balances: Immutable.Map {
                                        loading: false,
                                        error: null,
                                        assets: Immutable.List [
                                                  Immutable.Map {
                                                            balance: "0.29972769885",
                                                            currency: "ETH",
                                                            symbol: "ETH",
                                                            value: Immutable.Map {
                                                                      eth: "0.29972769885",
                                                                      btc: "0.0029972769885",
                                                                      usd: "123.4878119262",
                                                            },
                                                  },
                                                  Immutable.Map {
                                                            balance: "1",
                                                            currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                            symbol: "BOKKY",
                                                            value: Immutable.Map {
                                                                      eth: "0",
                                                                      btc: "0",
                                                                      usd: "0",
                                                            },
                                                  },
                                        ],
                                        total: Immutable.Map {
                                                  eth: "0.29972769885",
                                                  btc: "0.0029972769885",
                                                  usd: "123.4878119262",
                                        },
                              },
                              loadingBalances: false,
                              loadingBalancesError: null,
                    }
          }
          decryptWallet={[Function]}
          hideDecryptWalletModal={[Function]}
          initLedger={[Function]}
          initWalletsBalances={[Function]}
          loading={
                    Immutable.Map {
                              decryptingWallet: false,
                    }
          }
/>,
        <Modal.style
          destroyOnClose={true}
          footer={null}
          maskClosable={true}
          maskStyle={
                    Object {
                              "background": "rgba(232,237,239,.65)",
                            }
          }
          onCancel={[Function]}
          style={
                    Object {
                              "marginTop": "20px",
                            }
          }
          visible={undefined}
          width="585px"
>
          <Form.style__FormItem
                    colon={false}
                    label={
                              <Form.style__FormItemLabel>
                                        Please enter wallet password to proceed
                              </Form.style__FormItemLabel>
                    }
          >
                    <Input.style
                              onChange={[Function]}
                              onKeyPress={[Function]}
                              type="password"
                              value={null}
                    />
          </Form.style__FormItem>
          <Button.style
                    disabled={true}
                    onClick={[Function]}
                    type="primary"
          >
                    Confirm
          </Button.style>
</Modal.style>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "currentWallet": Immutable.Map {
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
},
          "currentWalletWithInfo": Immutable.Map {
            name: "1",
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
            type: "software",
            encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
            balances: Immutable.Map {
                        loading: false,
                        error: null,
                        assets: Immutable.List [
                                    Immutable.Map {
                                                balance: "0.29972769885",
                                                currency: "ETH",
                                                symbol: "ETH",
                                                value: Immutable.Map {
                                                            eth: "0.29972769885",
                                                            btc: "0.0029972769885",
                                                            usd: "123.4878119262",
                                                },
                                    },
                                    Immutable.Map {
                                                balance: "1",
                                                currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                symbol: "BOKKY",
                                                value: Immutable.Map {
                                                            eth: "0",
                                                            btc: "0",
                                                            usd: "0",
                                                },
                                    },
                        ],
                        total: Immutable.Map {
                                    eth: "0.29972769885",
                                    btc: "0.0029972769885",
                                    usd: "123.4878119262",
                        },
            },
            loadingBalances: false,
            loadingBalancesError: null,
},
          "decryptWallet": [Function],
          "hideDecryptWalletModal": [Function],
          "initLedger": [Function],
          "initWalletsBalances": [Function],
          "loading": Immutable.Map {
            decryptingWallet: false,
},
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Form.style__FormItem
              colon={false}
              label={
                            <Form.style__FormItemLabel>
                                          Please enter wallet password to proceed
                            </Form.style__FormItemLabel>
              }
>
              <Input.style
                            onChange={[Function]}
                            onKeyPress={[Function]}
                            type="password"
                            value={null}
              />
</Form.style__FormItem>,
            <Button.style
              disabled={true}
              onClick={[Function]}
              type="primary"
>
              Confirm
</Button.style>,
          ],
          "destroyOnClose": true,
          "footer": null,
          "maskClosable": true,
          "maskStyle": Object {
            "background": "rgba(232,237,239,.65)",
          },
          "onCancel": [Function],
          "style": Object {
            "marginTop": "20px",
          },
          "visible": undefined,
          "width": "585px",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Input.style
                onChange={[Function]}
                onKeyPress={[Function]}
                type="password"
                value={null}
/>,
              "colon": false,
              "label": <Form.style__FormItemLabel>
                Please enter wallet password to proceed
</Form.style__FormItemLabel>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onChange": [Function],
                "onKeyPress": [Function],
                "type": "password",
                "value": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Confirm",
              "disabled": true,
              "onClick": [Function],
              "type": "primary",
            },
            "ref": null,
            "rendered": "Confirm",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            currentWallet={
                        Immutable.Map {
                                    address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                        }
            }
            currentWalletWithInfo={
                        Immutable.Map {
                                    name: "1",
                                    address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                                    type: "software",
                                    encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
                                    balances: Immutable.Map {
                                                loading: false,
                                                error: null,
                                                assets: Immutable.List [
                                                            Immutable.Map {
                                                                        balance: "0.29972769885",
                                                                        currency: "ETH",
                                                                        symbol: "ETH",
                                                                        value: Immutable.Map {
                                                                                    eth: "0.29972769885",
                                                                                    btc: "0.0029972769885",
                                                                                    usd: "123.4878119262",
                                                                        },
                                                            },
                                                            Immutable.Map {
                                                                        balance: "1",
                                                                        currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                                        symbol: "BOKKY",
                                                                        value: Immutable.Map {
                                                                                    eth: "0",
                                                                                    btc: "0",
                                                                                    usd: "0",
                                                                        },
                                                            },
                                                ],
                                                total: Immutable.Map {
                                                            eth: "0.29972769885",
                                                            btc: "0.0029972769885",
                                                            usd: "123.4878119262",
                                                },
                                    },
                                    loadingBalances: false,
                                    loadingBalancesError: null,
                        }
            }
            decryptWallet={[Function]}
            hideDecryptWalletModal={[Function]}
            initLedger={[Function]}
            initWalletsBalances={[Function]}
            loading={
                        Immutable.Map {
                                    decryptingWallet: false,
                        }
            }
/>,
          <Modal.style
            destroyOnClose={true}
            footer={null}
            maskClosable={true}
            maskStyle={
                        Object {
                                    "background": "rgba(232,237,239,.65)",
                                  }
            }
            onCancel={[Function]}
            style={
                        Object {
                                    "marginTop": "20px",
                                  }
            }
            visible={undefined}
            width="585px"
>
            <Form.style__FormItem
                        colon={false}
                        label={
                                    <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                    </Form.style__FormItemLabel>
                        }
            >
                        <Input.style
                                    onChange={[Function]}
                                    onKeyPress={[Function]}
                                    type="password"
                                    value={null}
                        />
            </Form.style__FormItem>
            <Button.style
                        disabled={true}
                        onClick={[Function]}
                        type="primary"
            >
                        Confirm
            </Button.style>
</Modal.style>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "currentWallet": Immutable.Map {
              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
},
            "currentWalletWithInfo": Immutable.Map {
              name: "1",
              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
              type: "software",
              encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
              balances: Immutable.Map {
                            loading: false,
                            error: null,
                            assets: Immutable.List [
                                          Immutable.Map {
                                                        balance: "0.29972769885",
                                                        currency: "ETH",
                                                        symbol: "ETH",
                                                        value: Immutable.Map {
                                                                      eth: "0.29972769885",
                                                                      btc: "0.0029972769885",
                                                                      usd: "123.4878119262",
                                                        },
                                          },
                                          Immutable.Map {
                                                        balance: "1",
                                                        currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                        symbol: "BOKKY",
                                                        value: Immutable.Map {
                                                                      eth: "0",
                                                                      btc: "0",
                                                                      usd: "0",
                                                        },
                                          },
                            ],
                            total: Immutable.Map {
                                          eth: "0.29972769885",
                                          btc: "0.0029972769885",
                                          usd: "123.4878119262",
                            },
              },
              loadingBalances: false,
              loadingBalancesError: null,
},
            "decryptWallet": [Function],
            "hideDecryptWalletModal": [Function],
            "initLedger": [Function],
            "initWalletsBalances": [Function],
            "loading": Immutable.Map {
              decryptingWallet: false,
},
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Form.style__FormItem
                colon={false}
                label={
                                <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                </Form.style__FormItemLabel>
                }
>
                <Input.style
                                onChange={[Function]}
                                onKeyPress={[Function]}
                                type="password"
                                value={null}
                />
</Form.style__FormItem>,
              <Button.style
                disabled={true}
                onClick={[Function]}
                type="primary"
>
                Confirm
</Button.style>,
            ],
            "destroyOnClose": true,
            "footer": null,
            "maskClosable": true,
            "maskStyle": Object {
              "background": "rgba(232,237,239,.65)",
            },
            "onCancel": [Function],
            "style": Object {
              "marginTop": "20px",
            },
            "visible": undefined,
            "width": "585px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Input.style
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  type="password"
                  value={null}
/>,
                "colon": false,
                "label": <Form.style__FormItemLabel>
                  Please enter wallet password to proceed
</Form.style__FormItemLabel>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [Function],
                  "onKeyPress": [Function],
                  "type": "password",
                  "value": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Confirm",
                "disabled": true,
                "onClick": [Function],
                "type": "primary",
              },
              "ref": null,
              "rendered": "Confirm",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`WalletHOC shallow mount #Hoc rendering renders correctly when loading is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HOC
    currentWallet={
        Immutable.Map {
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
        }
    }
    currentWalletWithInfo={
        Immutable.Map {
            name: "1",
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
            type: "software",
            encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
            balances: Immutable.Map {
                loading: false,
                error: null,
                assets: Immutable.List [
                    Immutable.Map {
                        balance: "0.29972769885",
                        currency: "ETH",
                        symbol: "ETH",
                        value: Immutable.Map {
                            eth: "0.29972769885",
                            btc: "0.0029972769885",
                            usd: "123.4878119262",
                        },
                    },
                    Immutable.Map {
                        balance: "1",
                        currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                        symbol: "BOKKY",
                        value: Immutable.Map {
                            eth: "0",
                            btc: "0",
                            usd: "0",
                        },
                    },
                ],
                total: Immutable.Map {
                    eth: "0.29972769885",
                    btc: "0.0029972769885",
                    usd: "123.4878119262",
                },
            },
            loadingBalances: false,
            loadingBalancesError: null,
        }
    }
    decryptWallet={[Function]}
    hideDecryptWalletModal={[Function]}
    initLedger={[Function]}
    initWalletsBalances={[Function]}
    loading={
        Immutable.Map {
            decryptingWallet: true,
        }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          currentWallet={
                    Immutable.Map {
                              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                    }
          }
          currentWalletWithInfo={
                    Immutable.Map {
                              name: "1",
                              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                              type: "software",
                              encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
                              balances: Immutable.Map {
                                        loading: false,
                                        error: null,
                                        assets: Immutable.List [
                                                  Immutable.Map {
                                                            balance: "0.29972769885",
                                                            currency: "ETH",
                                                            symbol: "ETH",
                                                            value: Immutable.Map {
                                                                      eth: "0.29972769885",
                                                                      btc: "0.0029972769885",
                                                                      usd: "123.4878119262",
                                                            },
                                                  },
                                                  Immutable.Map {
                                                            balance: "1",
                                                            currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                            symbol: "BOKKY",
                                                            value: Immutable.Map {
                                                                      eth: "0",
                                                                      btc: "0",
                                                                      usd: "0",
                                                            },
                                                  },
                                        ],
                                        total: Immutable.Map {
                                                  eth: "0.29972769885",
                                                  btc: "0.0029972769885",
                                                  usd: "123.4878119262",
                                        },
                              },
                              loadingBalances: false,
                              loadingBalancesError: null,
                    }
          }
          decryptWallet={[Function]}
          hideDecryptWalletModal={[Function]}
          initLedger={[Function]}
          initWalletsBalances={[Function]}
          loading={
                    Immutable.Map {
                              decryptingWallet: true,
                    }
          }
/>,
        <Modal.style
          destroyOnClose={true}
          footer={null}
          maskClosable={true}
          maskStyle={
                    Object {
                              "background": "rgba(232,237,239,.65)",
                            }
          }
          onCancel={[Function]}
          style={
                    Object {
                              "marginTop": "20px",
                            }
          }
          visible={undefined}
          width="585px"
>
          <Form.style__FormItem
                    colon={false}
                    label={
                              <Form.style__FormItemLabel>
                                        Please enter wallet password to proceed
                              </Form.style__FormItemLabel>
                    }
          >
                    <Input.style
                              onChange={[Function]}
                              onKeyPress={[Function]}
                              type="password"
                              value={null}
                    />
          </Form.style__FormItem>
          <WalletHOC.style__StyledSpin
                    delay={0}
                    tip="Decrypting Wallet..."
          />
</Modal.style>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "currentWallet": Immutable.Map {
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
},
          "currentWalletWithInfo": Immutable.Map {
            name: "1",
            address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
            type: "software",
            encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
            balances: Immutable.Map {
                        loading: false,
                        error: null,
                        assets: Immutable.List [
                                    Immutable.Map {
                                                balance: "0.29972769885",
                                                currency: "ETH",
                                                symbol: "ETH",
                                                value: Immutable.Map {
                                                            eth: "0.29972769885",
                                                            btc: "0.0029972769885",
                                                            usd: "123.4878119262",
                                                },
                                    },
                                    Immutable.Map {
                                                balance: "1",
                                                currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                symbol: "BOKKY",
                                                value: Immutable.Map {
                                                            eth: "0",
                                                            btc: "0",
                                                            usd: "0",
                                                },
                                    },
                        ],
                        total: Immutable.Map {
                                    eth: "0.29972769885",
                                    btc: "0.0029972769885",
                                    usd: "123.4878119262",
                        },
            },
            loadingBalances: false,
            loadingBalancesError: null,
},
          "decryptWallet": [Function],
          "hideDecryptWalletModal": [Function],
          "initLedger": [Function],
          "initWalletsBalances": [Function],
          "loading": Immutable.Map {
            decryptingWallet: true,
},
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Form.style__FormItem
              colon={false}
              label={
                            <Form.style__FormItemLabel>
                                          Please enter wallet password to proceed
                            </Form.style__FormItemLabel>
              }
>
              <Input.style
                            onChange={[Function]}
                            onKeyPress={[Function]}
                            type="password"
                            value={null}
              />
</Form.style__FormItem>,
            <WalletHOC.style__StyledSpin
              delay={0}
              tip="Decrypting Wallet..."
/>,
          ],
          "destroyOnClose": true,
          "footer": null,
          "maskClosable": true,
          "maskStyle": Object {
            "background": "rgba(232,237,239,.65)",
          },
          "onCancel": [Function],
          "style": Object {
            "marginTop": "20px",
          },
          "visible": undefined,
          "width": "585px",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Input.style
                onChange={[Function]}
                onKeyPress={[Function]}
                type="password"
                value={null}
/>,
              "colon": false,
              "label": <Form.style__FormItemLabel>
                Please enter wallet password to proceed
</Form.style__FormItemLabel>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onChange": [Function],
                "onKeyPress": [Function],
                "type": "password",
                "value": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "delay": 0,
              "tip": "Decrypting Wallet...",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            currentWallet={
                        Immutable.Map {
                                    address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                        }
            }
            currentWalletWithInfo={
                        Immutable.Map {
                                    name: "1",
                                    address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
                                    type: "software",
                                    encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
                                    balances: Immutable.Map {
                                                loading: false,
                                                error: null,
                                                assets: Immutable.List [
                                                            Immutable.Map {
                                                                        balance: "0.29972769885",
                                                                        currency: "ETH",
                                                                        symbol: "ETH",
                                                                        value: Immutable.Map {
                                                                                    eth: "0.29972769885",
                                                                                    btc: "0.0029972769885",
                                                                                    usd: "123.4878119262",
                                                                        },
                                                            },
                                                            Immutable.Map {
                                                                        balance: "1",
                                                                        currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                                        symbol: "BOKKY",
                                                                        value: Immutable.Map {
                                                                                    eth: "0",
                                                                                    btc: "0",
                                                                                    usd: "0",
                                                                        },
                                                            },
                                                ],
                                                total: Immutable.Map {
                                                            eth: "0.29972769885",
                                                            btc: "0.0029972769885",
                                                            usd: "123.4878119262",
                                                },
                                    },
                                    loadingBalances: false,
                                    loadingBalancesError: null,
                        }
            }
            decryptWallet={[Function]}
            hideDecryptWalletModal={[Function]}
            initLedger={[Function]}
            initWalletsBalances={[Function]}
            loading={
                        Immutable.Map {
                                    decryptingWallet: true,
                        }
            }
/>,
          <Modal.style
            destroyOnClose={true}
            footer={null}
            maskClosable={true}
            maskStyle={
                        Object {
                                    "background": "rgba(232,237,239,.65)",
                                  }
            }
            onCancel={[Function]}
            style={
                        Object {
                                    "marginTop": "20px",
                                  }
            }
            visible={undefined}
            width="585px"
>
            <Form.style__FormItem
                        colon={false}
                        label={
                                    <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                    </Form.style__FormItemLabel>
                        }
            >
                        <Input.style
                                    onChange={[Function]}
                                    onKeyPress={[Function]}
                                    type="password"
                                    value={null}
                        />
            </Form.style__FormItem>
            <WalletHOC.style__StyledSpin
                        delay={0}
                        tip="Decrypting Wallet..."
            />
</Modal.style>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "currentWallet": Immutable.Map {
              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
},
            "currentWalletWithInfo": Immutable.Map {
              name: "1",
              address: "0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
              type: "software",
              encrypted: "{\\"address\\":\\"910c4ba923b2243dc13e00a066eefb8ffd905eb0\\",\\"id\\":\\"ae1eb0e5-f3e6-4bc8-b23c-1b6efb8e7f4e\\",\\"version\\":3,\\"Crypto\\":{\\"cipher\\":\\"aes-128-ctr\\",\\"cipherparams\\":{\\"iv\\":\\"160194dccdc2e29f98bc0b02f811dc95\\"},\\"ciphertext\\":\\"1e787b400e5fc733590fbf3a4cd547e81a1004cd3c7403f68416be472500915a\\",\\"kdf\\":\\"scrypt\\",\\"kdfparams\\":{\\"salt\\":\\"8adc2aed2709e8de54ba69903d102f25c8d87920f1f5cd952fa0c000aa7c91ac\\",\\"n\\":131072,\\"dklen\\":32,\\"p\\":1,\\"r\\":8},\\"mac\\":\\"952bcd9627ada0a96e83dd9feb4bdc6c47a39f4d20db0e9d649f6b247e5538ff\\"}}",
              balances: Immutable.Map {
                            loading: false,
                            error: null,
                            assets: Immutable.List [
                                          Immutable.Map {
                                                        balance: "0.29972769885",
                                                        currency: "ETH",
                                                        symbol: "ETH",
                                                        value: Immutable.Map {
                                                                      eth: "0.29972769885",
                                                                      btc: "0.0029972769885",
                                                                      usd: "123.4878119262",
                                                        },
                                          },
                                          Immutable.Map {
                                                        balance: "1",
                                                        currency: "0x583cbbb8a8443b38abcc0c956bece47340ea1367",
                                                        symbol: "BOKKY",
                                                        value: Immutable.Map {
                                                                      eth: "0",
                                                                      btc: "0",
                                                                      usd: "0",
                                                        },
                                          },
                            ],
                            total: Immutable.Map {
                                          eth: "0.29972769885",
                                          btc: "0.0029972769885",
                                          usd: "123.4878119262",
                            },
              },
              loadingBalances: false,
              loadingBalancesError: null,
},
            "decryptWallet": [Function],
            "hideDecryptWalletModal": [Function],
            "initLedger": [Function],
            "initWalletsBalances": [Function],
            "loading": Immutable.Map {
              decryptingWallet: true,
},
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Form.style__FormItem
                colon={false}
                label={
                                <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                </Form.style__FormItemLabel>
                }
>
                <Input.style
                                onChange={[Function]}
                                onKeyPress={[Function]}
                                type="password"
                                value={null}
                />
</Form.style__FormItem>,
              <WalletHOC.style__StyledSpin
                delay={0}
                tip="Decrypting Wallet..."
/>,
            ],
            "destroyOnClose": true,
            "footer": null,
            "maskClosable": true,
            "maskStyle": Object {
              "background": "rgba(232,237,239,.65)",
            },
            "onCancel": [Function],
            "style": Object {
              "marginTop": "20px",
            },
            "visible": undefined,
            "width": "585px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Input.style
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  type="password"
                  value={null}
/>,
                "colon": false,
                "label": <Form.style__FormItemLabel>
                  Please enter wallet password to proceed
</Form.style__FormItemLabel>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [Function],
                  "onKeyPress": [Function],
                  "type": "password",
                  "value": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "delay": 0,
                "tip": "Decrypting Wallet...",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
